fix responsiveness content now stacked vertically on smaller screen sizes

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,11 +29,13 @@ h1 {
 .logo {
     display: block;
     max-height: 180px;
+    max-width: fit-content;
 }
 
 .logo .mobile {
     display: none;
     max-height: 180px;
+    max-width: fit-content;
   }
 
 header {
